--- a/src/App.scss
+++ b/src/App.scss
@@ -1,35 +1,17 @@
-$bg-color: #fff;
+$bg-color: rgb(255, 255, 255);
 
 :root {
-	--main-color: #5dade2;
+	--main-color: #129efb;
 }
 
 * {
 	box-sizing: border-box;
 }
-
-@keyframes onNewQuote {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-	}
-}
-
-// .tw-logo {
-// 	path {
-// 		fill: #fff;
-// 	}
-// }
-
-body {
-	background-color: var(--main-color);
-	animation: ease-in onNewQuote 1s;
-}
-
-.animation {
-	animation: ease-in onNewQuote 1s;
+.bg {
+	background-size: cover;
+	height: 100vh;
+	background-image: url(./pic3.jpg);
+	filter: blur(2px);
 }
 
 #quote-box {
@@ -42,8 +24,9 @@ body {
 	background-color: $bg-color;
 	border-radius: 10px;
 	padding: 30px;
-	box-shadow: 0px 0px 20px 1px;
-
+	box-shadow: 0px 0px 15px 2px;
+	box-shadow: rgba(0, 0, 0, 0.507) 0px 10px 15px;
+	border: none;
 	p {
 		font-weight: 500;
 		padding: 5px;
@@ -62,6 +45,7 @@ body {
 		#author {
 			color: var(--main-color);
 			font-size: 1.3em;
+			margin: 0px;
 		}
 	}
 
@@ -136,17 +120,6 @@ body {
 		}
 	}
 }
-
-// @media (max-width: 600px) {
-// 	#quote-box {
-// 		#text {
-// 			font-size: 1.4em;
-// 		}
-// 		#author-container #author {
-// 			font-size: 1.2em;
-// 		}
-// 	}
-// }
 
 @media (max-width: 600px) {
 	#quote-box {
