--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@ $bg-color: rgb(255, 255, 255);
 	background-size: cover;
 	height: 100vh;
 	background-image: url(./pic3.jpg);
-	filter: blur(2px);
+	// filter: blur(2px);
 }
 
 #quote-box {
@@ -27,6 +27,9 @@ $bg-color: rgb(255, 255, 255);
 	box-shadow: 0px 0px 15px 2px;
 	box-shadow: rgba(0, 0, 0, 0.507) 0px 10px 15px;
 	border: none;
+	overflow: hidden;
+	transition: all 1s;
+	max-height: 1000px;
 	p {
 		font-weight: 500;
 		padding: 5px;
@@ -39,9 +42,34 @@ $bg-color: rgb(255, 255, 255);
 		font-size: 1.5em;
 	}
 
+	@keyframes fade {
+		from {
+			transform: translate(0px);
+		}
+		to {
+			transform: translate(100%);
+		}
+	}
+
+	.data-container {
+		position: relative;
+	}
+
+	div.anim-div {
+		transform: translate(-100%);
+		width: 100%;
+		background-color: #fff;
+		height: 102%;
+		position: absolute;
+		top: 0px;
+	}
+
+	div.animation {
+		animation: fade 1s ease-in;
+	}
+
 	#author-container {
 		text-align: right;
-
 		#author {
 			color: var(--main-color);
 			font-size: 1.3em;
